--- a/src/admin/index.html
+++ b/src/admin/index.html
@@ -1,11 +1,15 @@
 <!doctype html>
 <html>
-  <head>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>Netlify CMS</title>title>
-  </head>
-  <body>
-      <script src="index.js" type="module"></script>
-  </body>
+
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Netlify CMS</title>title>
+</head>
+
+<body>
+    <script src="index.js" type="module"></script>
+    <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+</body>
+
 </html>
